# personal-portfolio

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  Makefile  README.md  ROADMAP.md  changelog.md  entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
.github/actions/node-setup/: action.yml
.github/actions/python-setup/: action.yml
.github/workflows/: bump-dev-version.yml  lint-and-test.yml  python-ci.yml
cv_personal_page/: build.sh  manage.py
cv_personal_page/cv_personal_page/: asgi.py  settings.py  urls.py  wsgi.py
cv_personal_page/cv_personal_page/settings/: base.py  dev.py  prod.py
cv_personal_page/frontend/: index.js
cv_personal_page/frontend/javascript/: navigation_bar.js  scroll.js
cv_personal_page/frontend/styles/: main.css
cv_personal_page/home/: admin.py  models.py  translation.py  urls.py  views.py
cv_personal_page/home/migrations/: 0001_initial.py  0002_experience_location.py  0003_experience_description_en_experience_description_es_and_more.py  0004_personalinfo_description_personalinfo_description_en_and_more.py  0005_alter_experience_end_date.py
cv_personal_page/home/static/: load.js
cv_personal_page/home/static/js/: language.js  main.js  navigation_bar.js  scroll.js
cv_personal_page/home/templates/: index.html
cv_personal_page/locale/es/LC_MESSAGES/: django.mo  django.po
cv_personal_page/static/: bundle.js
cv_personal_page/static/css/: main.min.css
cv_personal_page/templates/: base.html
deploy/: docker-compose.yml
deploy/nginx/: nginx-proxy.conf  nginx-standalone.conf  nginx.conf
src/: manage.py
src/base/: admin.py  apps.py  models.py  signals.py  translation.py
src/base/migrations/: 0001_initial.py  0002_followmelink.py  0003_googleanalytics.py  0004_alter_googleanalytics_cookie_consent.py  0005_sitemedia.py  0006_rename_background_image_to_portrait_image.py
src/base/templates/: 404.html
src/base/templates/cotton/: arrow_right_icon.html  base.html  cookie_consent_banner.html  cta_block.html  footer.html  google_analytics.html  nav_bar.html  section_links.html
src/base/templatetags/: base_tags.py
src/base/tests/: test_signals.py
src/base/tests/models/: test_legal_and_privacy_model.py
src/base/tests/test_models/: test_follow_me_links_model.py  test_google_analytics_model.py  test_legal_and_privacy_model.py  test_site_media_model.py
src/contact/: admin.py  apps.py  email_backend.py  forms.py  models.py  translation.py  urls.py  views.py
src/contact/migrations/: 0001_initial.py  0002_contactmessage_recaptcha_score.py  0003_contactprivacynotice.py  0004_contactformconfiguration.py  0005_add_intro_to_contact_form_configuration.py  0006_add_qualification_fields_to_contact_message.py
src/contact/templates/: contact.html
src/contact/tests/: test_email_backend.py
src/contact/tests/test_views/: base_view_test.py  (+3 more)
src/cookie_consent/: admin.py  apps.py  models.py  translation.py  urls.py  utils.py  views.py
src/cookie_consent/migrations/: 0001_initial.py  0002_cookiegroup_version.py  0003_alter_cookiegroup_version.py  0004_delete_bannerconfig_delete_cookiegroup.py
src/cookie_consent/templatetags/: cookie_consent_tags.py
src/core/: asgi.py  logging.py  middleware.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
src/core/templates/: maintenance.html
src/core/templatetags/: filters.py
src/core/tests/: test_404_view.py  test_https_proxy.py  test_logging.py  test_maintenance_middleware.py  test_seo_views.py  test_www_redirect.py
src/frontend/: index.js
src/frontend/javascript/: contact_form.js  hero_scroll.js  language.js  navigation_bar.js  progress_bar.js  scroll.js  sticky_headings.js
src/frontend/styles/: main.css
src/home/: admin.py  apps.py  models.py  translation.py  urls.py  views.py
src/home/migrations/: 0001_initial.py  0002_experience_location.py  0003_experience_description_en_experience_description_es_and_more.py  0004_personalinfo_description_personalinfo_description_en_and_more.py  0005_alter_experience_end_date.py  0006_rename_description_personalinfo_title_and_more.py  0007_technology_experience_technologies_and_more.py  0008_alter_experience_company_subproject.py  0009_education_remove_experience_company_and_more.py  0010_create_project.py  0011_migrate_subproject_to_project.py  0012_delete_subproject.py  0013_reorder_technology_priority.py  0014_create_service.py  0015_create_process_step.py  0016_project_summary_project_summary_en_and_more.py  0017_alter_service_icon_name.py  0018_add_new_icons_and_process_step_icon_choices.py  0019_personalinfo_location.py
src/home/templates/: index.html  my-career.html  project-detail.html  projects.html
src/templates/: base.html
src/templates/cotton/: base.html  nav_bar.html
src/utils/: fields.py  helpers.py  testing_utils.py  types.py
src/utils/test_utils/: base_view_test_case.py  constants.py  custom_test_runner.py
src/utils/tests/: test_fields.py
src/utils/version_manager/: __main__.py  project_version.py  version_manager.py
(+62 files in other folders)
