[project]
name = "personal-portfolio"
version = "0.5.0"
description = ""
authors = [{ name = "Roberto Fernández Iglesias", email = "roberfi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django==5.1.7",
    "dj-database-url==2.3.0",
    "django-environ==0.12.0",
    "django-cooco==0.0.1",
    "django-cotton==2.0.1",
    "django-modeltranslation==0.19.12",
    "django-solo==2.4.0",
    "markdown==3.7",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.1",
    "pre-commit==4.2.0",
    "django-stubs[compatible-mypy]==5.1.3",
    "djlint==1.36.4",
    "types-markdown==3.7.0.20241204",
    "beautifulsoup4==4.13.3",
    "types-beautifulsoup4==4.12.0.20250204",
]
prod = ["gunicorn==23.0.0", "psycopg2-binary==2.9.10"]

[tool.mypy]
python_version = "3.13"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
plugins = ["mypy_django_plugin.main"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "DJ",  # flake8-django
    "E",   # pycodestyle error
    "EM",  # flake8-errmsg
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # Pylint
    "RUF", # ruff-specific-rules
    "TC",  # flake8-type-checking
    "W",   # pycodestyle warning
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.djlint]
profile = "django"
extension = "html"
custom_html = "c-[\\w-]+"
max_blank_lines = 1
max_line_length = 120
line_break_after_multiline_tag = true

[tool.django-stubs]
django_settings_module = "core.settings"
