[project]
name = "personal-portfolio"
version = "0.6.0.dev5"
description = ""
authors = [{ name = "Roberto Fernández Iglesias", email = "roberfi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.1.14,<6.0",
    "dj-database-url>=2.3.0,<3.0",
    "django-environ>=0.12.0,<1.0",
    "django-cooco>=0.0.1,<1.0",
    "django-cotton>=2.0.1,<3.0",
    "django-modeltranslation>=0.19.12,<1.0",
    "django-solo>=2.4.0,<3.0",
    "markdown>=3.7,<4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0",
    "ruff>=0.11.1,<1.0",
    "pre-commit>=4.2.0,<5.0",
    "django-stubs[compatible-mypy]>=5.1.3,<6.0",
    "djlint>=1.36.4,<2.0",
    "types-markdown>=3.7.0.20241204,<4.0",
    "beautifulsoup4>=4.13.3,<5.0",
    "types-beautifulsoup4>=4.12.0.20250204,<5.0",
]
prod = ["gunicorn>=23.0.0,<24.0", "psycopg2-binary>=2.9.10,<3.0"]

[tool.mypy]
python_version = "3.13"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "DJ",  # flake8-django
    "E",   # pycodestyle error
    "EM",  # flake8-errmsg
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # Pylint
    "RUF", # ruff-specific-rules
    "TC",  # flake8-type-checking
    "W",   # pycodestyle warning
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.djlint]
profile = "django"
extension = "html"
custom_html = "c-[\\w-]+"
max_blank_lines = 1
max_line_length = 120
line_break_after_multiline_tag = true
ignore = "H006"

[tool.django-stubs]
django_settings_module = "core.settings"
